# moseq2-extract

./: .gitignore  .pdm-python  pyproject.toml  setup.py
moseq2_extract/: cli.py  gui.py  util.py
moseq2_extract/extract/: extract.py  proc.py  roi.py  track.py
moseq2_extract/helpers/: data.py  extract.py  wrappers.py
moseq2_extract/io/: image.py  video.py
tests/integration_tests/: test_cli.py  test_gui.py
tests/unit_tests/: test_extract_proc.py  test_extract_roi.py  test_extract_track.py  test_helper_data.py  test_helper_extract.py  test_io_image.py  test_io_video.py  test_util.py
