[tool.pdm]

[project]
name = "moseq2-extract"
version = "1.2.0"
description = "To boldly go where no mouse has gone before"
readme = "README.md"
authors = [
    {name = "Datta Lab"},
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "click>=7.0",
    "cytoolz>=0.10.1",
    "h5py>=2.10.0",
    "joblib>=0.15.1",
    "matplotlib>=3.1.2",
    "numpy>=1.18.3",
    "opencv-python>=4.1.2.30",
    "ruamel.yaml>=0.16.5",
    "scikit-image>=0.16.2",
    "scikit-learn>=0.20.3",
    "scipy>=1.3.2",
    "statsmodels>=0.10.2",
    "tqdm>=4.48.0",
    "tifffile>=2024.7.24",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-click",
    "sphinx-rtd-theme",
]

[project.scripts]
moseq2-extract = "moseq2_extract.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
